# mlops-feature-platform

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
api/: __init__.py
feature_store/: __init__.py  registry.py  serving.py
feature_store/feature_repo/: data_sources.py  feature_store.yaml  features.py
k8s/: airflow-values.yaml  deployment.yaml  spark-operator.yaml
model_registry/: __init__.py
monitoring/: __init__.py  alert_manager.py  dashboard.py  data_quality.py  drift_detector.py
pipelines/: __init__.py
pipelines/dags/: feature_pipeline_dag.py  model_retraining_dag.py
pipelines/spark/: data_validation.py  feature_computation.py
pipelines/tasks/: __init__.py  feature_tasks.py
tests/: __init__.py  test_alert_manager.py  test_api.py  test_dashboard.py  test_data_quality.py  test_drift_detector.py  test_feature_registry.py  test_feature_serving.py  test_feature_tasks.py  test_integration.py  test_model_registry.py  test_pipelines.py
