[project]
name = "mlops-feature-platform"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.137.2",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "numpy>=1.26",
    "scipy>=1.17.1",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=9.1.1", "pytest-cov>=5.0", "ruff>=0.15.18"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
